alignment fix

--- a/src/app.css
+++ b/src/app.css
@@ -108,7 +108,7 @@
   .icon {
     width: 1em;
     height: 1em;
-    display: inline-block;
+    /* display: inline-block; */
     vertical-align: middle;
     fill: currentColor;
   }
